src/objects/Connection__c.object
<CustomObject>
    <fields>
        <fullName>DisconnectionDate__c</fullName>
        <description>Dependent on Charging Area</description>
        <label>Disconnection Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DisconnectionReason__c</fullName>
        <label>Disconnection Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Unpaid Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Void Property</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReconnectionDate__c</fullName>
        <label>Reconnection Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SupplyPoint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to determine the tariffs that area applied. Segment the data into geographical areas</description>
        <label>Supply Point</label>
        <referenceTo>SupplyPoint__c</referenceTo>
        <relationshipLabel>Connections</relationshipLabel>
        <relationshipName>Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Connection</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{000000000}</displayFormat>
        <label>Connection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>